# ncwrap

./: CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  app  app.c  build.sh  compile_commands.json  ncurses_wrapper_impl.c  ncurses_wrapper_impl.h  test.c
app/: CMakeLists.txt  app.c
inc/: ncwrap.h
include/: ncwrap.h
ncwrap/: CMakeLists.txt
ncwrap/include/: ncwrap.h
ncwrap/src/: ncwrap_helper.h  ncwrap_impl.c  ncwrap_impl.h
src/: helper.c  helper.h  input.c  input.h  logger.c  logger.h  menu.c  menu.h  ncwrap_helper.h  ncwrap_impl.c  ncwrap_impl.h  scroll.c  scroll.h  utils.c  utils.h  window.c  window.h
